// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syscalls Neo.Crypto.CheckMultiSig 1`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 2`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 3`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 4`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 5`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 6`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 7`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 8`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 9`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 10`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 11`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 12`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 13`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 14`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 15`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 16`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 17`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 18`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 19`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 20`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 21`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 22`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 23`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckMultiSig 24`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 1`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 2`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 3`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 4`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 5`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 6`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 7`] = `Array []`;

exports[`syscalls Neo.Crypto.CheckSig 8`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 1`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 2`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 3`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 4`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 5`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 6`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 7`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 8`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 9`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 10`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 11`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 12`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 13`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 14`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 15`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 16`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 17`] = `"contract.get"`;

exports[`syscalls Neo.Enumerator.Next 18`] = `
Array [
  Array [
    Object {
      "hash": "34fd83a0af91a5f6a625cdeffc9b0f68b9fb3150",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Next 19`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Enumerator.Next 20`] = `
Array [
  Array [
    Object {
      "hash": "34fd83a0af91a5f6a625cdeffc9b0f68b9fb3150",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Next 21`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 22`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 23`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 24`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 25`] = `"contract.get"`;

exports[`syscalls Neo.Enumerator.Next 26`] = `
Array [
  Array [
    Object {
      "hash": "34fd83a0af91a5f6a625cdeffc9b0f68b9fb3150",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Next 27`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Enumerator.Next 28`] = `
Array [
  Array [
    Object {
      "hash": "34fd83a0af91a5f6a625cdeffc9b0f68b9fb3150",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Next 29`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 30`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 31`] = `Array []`;

exports[`syscalls Neo.Enumerator.Next 32`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 1`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 2`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 3`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 4`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 5`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 6`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 7`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 8`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 9`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 10`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 11`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 12`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 13`] = `"contract.get"`;

exports[`syscalls Neo.Enumerator.Value 14`] = `
Array [
  Array [
    Object {
      "hash": "3ef0e968b799c0f6bdccb3d1c1a28ac8791751f6",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Value 15`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Enumerator.Value 16`] = `
Array [
  Array [
    Object {
      "hash": "3ef0e968b799c0f6bdccb3d1c1a28ac8791751f6",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Value 17`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 18`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 19`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 20`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 21`] = `"contract.get"`;

exports[`syscalls Neo.Enumerator.Value 22`] = `
Array [
  Array [
    Object {
      "hash": "66dfcbd63bdbd38fbc4d3e9de003bbe66627ba42",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Value 23`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Enumerator.Value 24`] = `
Array [
  Array [
    Object {
      "hash": "66dfcbd63bdbd38fbc4d3e9de003bbe66627ba42",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Value 25`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 26`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 27`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 28`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 29`] = `"contract.get"`;

exports[`syscalls Neo.Enumerator.Value 30`] = `
Array [
  Array [
    Object {
      "hash": "0a64ef1ecff1fa607750ef9261e4f1c2bbe7ef57",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Value 31`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Enumerator.Value 32`] = `
Array [
  Array [
    Object {
      "hash": "0a64ef1ecff1fa607750ef9261e4f1c2bbe7ef57",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Enumerator.Value 33`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 34`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 35`] = `Array []`;

exports[`syscalls Neo.Enumerator.Value 36`] = `Array []`;

exports[`syscalls Neo.Iterator.Create 1`] = `Array []`;

exports[`syscalls Neo.Iterator.Create 2`] = `Array []`;

exports[`syscalls Neo.Iterator.Create 3`] = `Array []`;

exports[`syscalls Neo.Iterator.Create 4`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 1`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 2`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 3`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 4`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 5`] = `"contract.get"`;

exports[`syscalls Neo.Iterator.Key 6`] = `
Array [
  Array [
    Object {
      "hash": "3ef0e968b799c0f6bdccb3d1c1a28ac8791751f6",
    },
  ],
]
`;

exports[`syscalls Neo.Iterator.Key 7`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Iterator.Key 8`] = `
Array [
  Array [
    Object {
      "hash": "3ef0e968b799c0f6bdccb3d1c1a28ac8791751f6",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Iterator.Key 9`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 10`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 11`] = `Array []`;

exports[`syscalls Neo.Iterator.Key 12`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 1`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 2`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 3`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 4`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 5`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 6`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 7`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 8`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 9`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 10`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 11`] = `Array []`;

exports[`syscalls Neo.Json.Deserialize 12`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 1`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 2`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 3`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 4`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 5`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 6`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 7`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 8`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 9`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 10`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 11`] = `Array []`;

exports[`syscalls Neo.Json.Serialize 12`] = `Array []`;

exports[`syscalls Neo.Native.Deploy 1`] = `"contract.add"`;

exports[`syscalls Neo.Native.Deploy 2`] = `
Array [
  Array [
    Object {
      "__$type": "Contract",
      "manifest": ContractManifest {
        "abi": ContractABI {
          "entryPoint": ContractMethodDescriptor {
            "name": "main",
            "parameters": Array [
              ContractParameterDeclaration {
                "name": "operation",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 7,
              },
              ContractParameterDeclaration {
                "name": "args",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 16,
              },
            ],
            "returnType": 2,
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
          "events": Array [],
          "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
          "methods": Array [
            ContractMethodDescriptor {
              "name": "getMaxTransactionsPerBlock",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "getMaxBlockSize",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "getFeePerByte",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "getBlockedAccounts",
              "parameters": Array [],
              "returnType": 16,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "setMaxBlockSize",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "value",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "setMaxTransactionsPerBlock",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "value",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "setFeePerByte",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "value",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "blockAccount",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "unblockAccount",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
          ],
          "serializeWire": [Function],
          "sizeInternal": [Function],
        },
        "extra": undefined,
        "features": 0,
        "groups": Array [],
        "hasStorage": false,
        "hashHexInternal": [Function],
        "hashInternal": [Function],
        "maxLength": 2048,
        "payable": false,
        "permissions": Array [
          ContractPermissions {
            "contract": ContractPermissionDescriptor {
              "hashOrGroup": undefined,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            "methods": Array [],
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
        ],
        "safeMethods": Array [
          "getMaxTransactionsPerBlock",
          "getMaxBlockSize",
          "getFeePerByte",
          "getBlockedAccounts",
        ],
        "serializeWire": [Function],
        "sizeInternal": [Function],
        "trusts": Array [],
      },
      "script": "68114e656f2e4e61746976652e506f6c696379",
    },
  ],
  Array [
    Object {
      "__$type": "Contract",
      "manifest": ContractManifest {
        "abi": ContractABI {
          "entryPoint": ContractMethodDescriptor {
            "name": "main",
            "parameters": Array [
              ContractParameterDeclaration {
                "name": "operation",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 7,
              },
              ContractParameterDeclaration {
                "name": "args",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 16,
              },
            ],
            "returnType": 2,
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
          "events": Array [],
          "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
          "methods": Array [
            ContractMethodDescriptor {
              "name": "getSysFeeAmount",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "name",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "symbol",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "decimals",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "totalSupply",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "balanceOf",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "transfer",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "from",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "to",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "amount",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
          ],
          "serializeWire": [Function],
          "sizeInternal": [Function],
        },
        "extra": undefined,
        "features": 0,
        "groups": Array [],
        "hasStorage": false,
        "hashHexInternal": [Function],
        "hashInternal": [Function],
        "maxLength": 2048,
        "payable": false,
        "permissions": Array [
          ContractPermissions {
            "contract": ContractPermissionDescriptor {
              "hashOrGroup": undefined,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            "methods": Array [],
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
        ],
        "safeMethods": Array [
          "getSysFeeAmount",
          "name",
          "symbol",
          "decimals",
          "totalSupply",
          "balanceOf",
        ],
        "serializeWire": [Function],
        "sizeInternal": [Function],
        "trusts": Array [],
      },
      "script": "68154e656f2e4e61746976652e546f6b656e732e474153",
    },
  ],
  Array [
    Object {
      "__$type": "Contract",
      "manifest": ContractManifest {
        "abi": ContractABI {
          "entryPoint": ContractMethodDescriptor {
            "name": "main",
            "parameters": Array [
              ContractParameterDeclaration {
                "name": "operation",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 7,
              },
              ContractParameterDeclaration {
                "name": "args",
                "serializeWire": [Function],
                "sizeInternal": [Function],
                "type": 16,
              },
            ],
            "returnType": 2,
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
          "events": Array [],
          "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
          "methods": Array [
            ContractMethodDescriptor {
              "name": "name",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "symbol",
              "parameters": Array [],
              "returnType": 7,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "decimals",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "totalSupply",
              "parameters": Array [],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "balanceOf",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "account",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
              ],
              "returnType": 2,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            ContractMethodDescriptor {
              "name": "transfer",
              "parameters": Array [
                ContractParameterDeclaration {
                  "name": "from",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "to",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 3,
                },
                ContractParameterDeclaration {
                  "name": "amount",
                  "serializeWire": [Function],
                  "sizeInternal": [Function],
                  "type": 2,
                },
              ],
              "returnType": 1,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
          ],
          "serializeWire": [Function],
          "sizeInternal": [Function],
        },
        "extra": undefined,
        "features": 0,
        "groups": Array [],
        "hasStorage": false,
        "hashHexInternal": [Function],
        "hashInternal": [Function],
        "maxLength": 2048,
        "payable": false,
        "permissions": Array [
          ContractPermissions {
            "contract": ContractPermissionDescriptor {
              "hashOrGroup": undefined,
              "serializeWire": [Function],
              "sizeInternal": [Function],
            },
            "methods": Array [],
            "serializeWire": [Function],
            "sizeInternal": [Function],
          },
        ],
        "safeMethods": Array [
          "name",
          "symbol",
          "decimals",
          "totalSupply",
          "balanceOf",
        ],
        "serializeWire": [Function],
        "sizeInternal": [Function],
        "trusts": Array [],
      },
      "script": "68154e656f2e4e61746976652e546f6b656e732e4e454f",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Deploy 3`] = `"storageItem.add"`;

exports[`syscalls Neo.Native.Deploy 4`] = `
Array [
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "10",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "000004",
    },
  ],
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "17",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "0002",
    },
  ],
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0a",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "e803",
    },
  ],
  Array [
    StorageItem {
      "flags": 0,
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
      "serializeWire": [Function],
      "sizeInternal": [Function],
      "value": "0000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Deploy 5`] = `"storageItem.tryGet"`;

exports[`syscalls Neo.Native.Deploy 6`] = `
Array [
  Array [
    Object {
      "hash": "173e6724888531bfb401c9f212c4f0b0b9569cdf",
      "key": "11",
    },
  ],
  Array [
    Object {
      "hash": "a2d96c2ec153e9e3255a84db1881745555fecb6c",
      "key": "11",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Deploy 7`] = `Array []`;

exports[`syscalls Neo.Native.Deploy 8`] = `Array []`;

exports[`syscalls Neo.Native.Deploy 9`] = `Array []`;

exports[`syscalls Neo.Native.Deploy 10`] = `Array []`;

exports[`syscalls Neo.Native.Policy 1`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 2`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "17",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 3`] = `Array []`;

exports[`syscalls Neo.Native.Policy 4`] = `Array []`;

exports[`syscalls Neo.Native.Policy 5`] = `Array []`;

exports[`syscalls Neo.Native.Policy 6`] = `Array []`;

exports[`syscalls Neo.Native.Policy 7`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 8`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "10",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 9`] = `Array []`;

exports[`syscalls Neo.Native.Policy 10`] = `Array []`;

exports[`syscalls Neo.Native.Policy 11`] = `Array []`;

exports[`syscalls Neo.Native.Policy 12`] = `Array []`;

exports[`syscalls Neo.Native.Policy 13`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 14`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0a",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 15`] = `Array []`;

exports[`syscalls Neo.Native.Policy 16`] = `Array []`;

exports[`syscalls Neo.Native.Policy 17`] = `Array []`;

exports[`syscalls Neo.Native.Policy 18`] = `Array []`;

exports[`syscalls Neo.Native.Policy 19`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 20`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 21`] = `Array []`;

exports[`syscalls Neo.Native.Policy 22`] = `Array []`;

exports[`syscalls Neo.Native.Policy 23`] = `Array []`;

exports[`syscalls Neo.Native.Policy 24`] = `Array []`;

exports[`syscalls Neo.Native.Policy 25`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 26`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "10",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 27`] = `"storageItem.update"`;

exports[`syscalls Neo.Native.Policy 28`] = `
Array [
  Array [
    undefined,
    Object {
      "flags": 0,
      "value": "0a",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 29`] = `Array []`;

exports[`syscalls Neo.Native.Policy 30`] = `Array []`;

exports[`syscalls Neo.Native.Policy 31`] = `Array []`;

exports[`syscalls Neo.Native.Policy 32`] = `Array []`;

exports[`syscalls Neo.Native.Policy 33`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 34`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "17",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 35`] = `"storageItem.update"`;

exports[`syscalls Neo.Native.Policy 36`] = `
Array [
  Array [
    undefined,
    Object {
      "flags": 0,
      "value": "05",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 37`] = `Array []`;

exports[`syscalls Neo.Native.Policy 38`] = `Array []`;

exports[`syscalls Neo.Native.Policy 39`] = `Array []`;

exports[`syscalls Neo.Native.Policy 40`] = `Array []`;

exports[`syscalls Neo.Native.Policy 41`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 42`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0a",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 43`] = `"storageItem.update"`;

exports[`syscalls Neo.Native.Policy 44`] = `
Array [
  Array [
    undefined,
    Object {
      "flags": 0,
      "value": "0a",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 45`] = `Array []`;

exports[`syscalls Neo.Native.Policy 46`] = `Array []`;

exports[`syscalls Neo.Native.Policy 47`] = `Array []`;

exports[`syscalls Neo.Native.Policy 48`] = `Array []`;

exports[`syscalls Neo.Native.Policy 49`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 50`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 51`] = `"storageItem.update"`;

exports[`syscalls Neo.Native.Policy 52`] = `
Array [
  Array [
    Object {
      "value": "0000000000000000000000000000000000000000",
    },
    Object {
      "flags": 0,
      "value": "00000000000000000000000000000000000000000101010101010101010101010101010101010101",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 53`] = `Array []`;

exports[`syscalls Neo.Native.Policy 54`] = `Array []`;

exports[`syscalls Neo.Native.Policy 55`] = `Array []`;

exports[`syscalls Neo.Native.Policy 56`] = `Array []`;

exports[`syscalls Neo.Native.Policy 57`] = `"storageItem.get"`;

exports[`syscalls Neo.Native.Policy 58`] = `
Array [
  Array [
    Object {
      "hash": "4ab5b57166b045ac8175c7e2fa48086689834ba0",
      "key": "0f",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 59`] = `"storageItem.update"`;

exports[`syscalls Neo.Native.Policy 60`] = `
Array [
  Array [
    Object {
      "value": "0101010101010101010101010101010101010101",
    },
    Object {
      "flags": 0,
      "value": "0101010101010101010101010101010101010101",
    },
  ],
]
`;

exports[`syscalls Neo.Native.Policy 61`] = `Array []`;

exports[`syscalls Neo.Native.Policy 62`] = `Array []`;

exports[`syscalls Neo.Native.Policy 63`] = `Array []`;

exports[`syscalls Neo.Native.Policy 64`] = `Array []`;

exports[`syscalls Neo.Storage.Find 1`] = `
Array [
  IteratorStackItem {
    "mutableCount": 1,
    "referenceID": 47,
    "value": StackItemIterator {
      "enumerator": Object {
        "next": [Function],
        "return": [Function],
        "throw": [Function],
        Symbol(Symbol.asyncIterator): [Function],
      },
      "mutableDone": false,
    },
  },
]
`;

exports[`syscalls Neo.Storage.Find 2`] = `"contract.get"`;

exports[`syscalls Neo.Storage.Find 3`] = `
Array [
  Array [
    Object {
      "hash": "c5f1a32ca949050b5ad07587c475316c8b3c9647",
    },
  ],
]
`;

exports[`syscalls Neo.Storage.Find 4`] = `"storageItem.getAll$"`;

exports[`syscalls Neo.Storage.Find 5`] = `
Array [
  Array [
    Object {
      "hash": "c5f1a32ca949050b5ad07587c475316c8b3c9647",
      "prefix": "01",
    },
  ],
]
`;

exports[`syscalls Neo.Storage.Find 6`] = `Array []`;

exports[`syscalls Neo.Storage.Find 7`] = `Array []`;

exports[`syscalls Neo.Storage.Find 8`] = `Array []`;

exports[`syscalls Neo.Storage.Find 9`] = `Array []`;

exports[`syscalls Neo.Transaction.GetScript 1`] = `"transaction.get"`;

exports[`syscalls Neo.Transaction.GetScript 2`] = `
Array [
  Array [
    Object {
      "hash": "0303030303030303030303030303030303030303030303030303030303030303",
    },
  ],
]
`;

exports[`syscalls Neo.Transaction.GetScript 3`] = `Array []`;

exports[`syscalls Neo.Transaction.GetScript 4`] = `Array []`;

exports[`syscalls Neo.Transaction.GetScript 5`] = `Array []`;

exports[`syscalls Neo.Transaction.GetScript 6`] = `Array []`;

exports[`syscalls System.Blockchain.GetBlock 1`] = `"block.get"`;

exports[`syscalls System.Blockchain.GetBlock 2`] = `
Array [
  Array [
    Object {
      "hashOrIndex": "0303030303030303030303030303030303030303030303030303030303030303",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetBlock 3`] = `Array []`;

exports[`syscalls System.Blockchain.GetBlock 4`] = `Array []`;

exports[`syscalls System.Blockchain.GetBlock 5`] = `Array []`;

exports[`syscalls System.Blockchain.GetBlock 6`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 1`] = `"contract.tryGet"`;

exports[`syscalls System.Blockchain.GetContract 2`] = `
Array [
  Array [
    Object {
      "hash": "3775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetContract 3`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 4`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 5`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 6`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 7`] = `"contract.tryGet"`;

exports[`syscalls System.Blockchain.GetContract 8`] = `
Array [
  Array [
    Object {
      "hash": "3775292229eccdf904f16fff8e83e7cffdc0f0ce",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetContract 9`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 10`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 11`] = `Array []`;

exports[`syscalls System.Blockchain.GetContract 12`] = `Array []`;

exports[`syscalls System.Blockchain.GetHeight 1`] = `Array []`;

exports[`syscalls System.Blockchain.GetHeight 2`] = `Array []`;

exports[`syscalls System.Blockchain.GetHeight 3`] = `Array []`;

exports[`syscalls System.Blockchain.GetHeight 4`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransaction 1`] = `"transaction.get"`;

exports[`syscalls System.Blockchain.GetTransaction 2`] = `
Array [
  Array [
    Object {
      "hash": "0303030303030303030303030303030303030303030303030303030303030303",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetTransaction 3`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransaction 4`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransaction 5`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransaction 6`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 1`] = `"block.tryGet"`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 2`] = `
Array [
  Array [
    Object {
      "hashOrIndex": "0303030303030303030303030303030303030303030303030303030303030303",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 3`] = `"transaction.tryGet"`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 4`] = `
Array [
  Array [
    Object {
      "hash": "89d5a84cc68f12151d1362b04494375efc7e1115bc9641e932c2fbdadd91cf78",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 5`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 6`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 7`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 8`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 9`] = `"block.tryGet"`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 10`] = `
Array [
  Array [
    Object {
      "hashOrIndex": "0303030303030303030303030303030303030303030303030303030303030303",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 11`] = `"transaction.tryGet"`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 12`] = `
Array [
  Array [
    Object {
      "hash": "2948e6a8504f9b0914e5de4f8b66bf9df6999ccc615b2aaca6b00164f0580c59",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 13`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 14`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 15`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionFromBlock 16`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionHeight 1`] = `"transactionData.get"`;

exports[`syscalls System.Blockchain.GetTransactionHeight 2`] = `
Array [
  Array [
    Object {
      "hash": "0303030303030303030303030303030303030303030303030303030303030303",
    },
  ],
]
`;

exports[`syscalls System.Blockchain.GetTransactionHeight 3`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionHeight 4`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionHeight 5`] = `Array []`;

exports[`syscalls System.Blockchain.GetTransactionHeight 6`] = `Array []`;

exports[`syscalls System.Contract.Call 1`] = `"contract.tryGet"`;

exports[`syscalls System.Contract.Call 2`] = `
Array [
  Array [
    Object {
      "hash": "0101010101010101010101010101010101010101",
    },
  ],
  Array [
    Object {
      "hash": "d62351631d2cc13da590348467f5375fd0464b35",
    },
  ],
]
`;

exports[`syscalls System.Contract.Call 3`] = `Array []`;

exports[`syscalls System.Contract.Call 4`] = `Array []`;

exports[`syscalls System.Contract.Call 5`] = `Array []`;

exports[`syscalls System.Contract.Call 6`] = `Array []`;

exports[`syscalls System.Contract.Destroy 1`] = `"contract.tryGet"`;

exports[`syscalls System.Contract.Destroy 2`] = `
Array [
  Array [
    Object {
      "hash": "f1f29fcdc9e39bc65568f779e075ceb24eb514bc",
    },
  ],
]
`;

exports[`syscalls System.Contract.Destroy 3`] = `Array []`;

exports[`syscalls System.Contract.Destroy 4`] = `Array []`;

exports[`syscalls System.Contract.Destroy 5`] = `Array []`;

exports[`syscalls System.Contract.Destroy 6`] = `Array []`;

exports[`syscalls System.Crypto.Verify 1`] = `Array []`;

exports[`syscalls System.Crypto.Verify 2`] = `Array []`;

exports[`syscalls System.Crypto.Verify 3`] = `Array []`;

exports[`syscalls System.Crypto.Verify 4`] = `Array []`;

exports[`syscalls System.Crypto.Verify 5`] = `Array []`;

exports[`syscalls System.Crypto.Verify 6`] = `Array []`;

exports[`syscalls System.Crypto.Verify 7`] = `Array []`;

exports[`syscalls System.Crypto.Verify 8`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 1`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 2`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 3`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 4`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 5`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 6`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 7`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetCallingScriptHash 8`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetEntryScriptHash 1`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetEntryScriptHash 2`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetEntryScriptHash 3`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetEntryScriptHash 4`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 1`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 2`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 3`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 4`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 5`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 6`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 7`] = `Array []`;

exports[`syscalls System.ExecutionEngine.GetScriptContainer 8`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 1`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 2`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 3`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 4`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 5`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 6`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 7`] = `Array []`;

exports[`syscalls System.Runtime.CheckWitness 8`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 1`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 2`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 3`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 4`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 5`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 6`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 7`] = `Array []`;

exports[`syscalls System.Runtime.Deserialize 8`] = `Array []`;

exports[`syscalls System.Runtime.GetInvocationCounter 1`] = `Array []`;

exports[`syscalls System.Runtime.GetInvocationCounter 2`] = `Array []`;

exports[`syscalls System.Runtime.GetInvocationCounter 3`] = `Array []`;

exports[`syscalls System.Runtime.GetInvocationCounter 4`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 1`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 2`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 3`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 4`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 5`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 6`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 7`] = `Array []`;

exports[`syscalls System.Runtime.GetNotifications 8`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 1`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 2`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 3`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 4`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 5`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 6`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 7`] = `Array []`;

exports[`syscalls System.Runtime.GetTime 8`] = `Array []`;

exports[`syscalls System.Runtime.GetTrigger 1`] = `Array []`;

exports[`syscalls System.Runtime.GetTrigger 2`] = `Array []`;

exports[`syscalls System.Runtime.GetTrigger 3`] = `Array []`;

exports[`syscalls System.Runtime.GetTrigger 4`] = `Array []`;

exports[`syscalls System.Runtime.Log 1`] = `Array []`;

exports[`syscalls System.Runtime.Log 2`] = `
Array [
  Array [
    Object {
      "message": "foo",
      "scriptHash": "fa82fc0625deba6ddd33c8d0afd25f86db906b81",
    },
  ],
]
`;

exports[`syscalls System.Runtime.Log 3`] = `Array []`;

exports[`syscalls System.Runtime.Log 4`] = `Array []`;

exports[`syscalls System.Runtime.Notify 1`] = `
Array [
  Array [
    Object {
      "args": Array [
        Object {
          "__$type": "IntegerContractParameter",
          "name": undefined,
          "type": 2,
          "value": "1",
        },
      ],
      "scriptHash": "3de713696719d7aba1981ee6501c46950a3f4fd8",
    },
  ],
]
`;

exports[`syscalls System.Runtime.Notify 2`] = `Array []`;

exports[`syscalls System.Runtime.Notify 3`] = `Array []`;

exports[`syscalls System.Runtime.Notify 4`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 1`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 2`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 3`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 4`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 5`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 6`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 7`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 8`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 9`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 10`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 11`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 12`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 13`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 14`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 15`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 16`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 17`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 18`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 19`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 20`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 21`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 22`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 23`] = `Array []`;

exports[`syscalls System.Runtime.Serialize 24`] = `Array []`;

exports[`syscalls System.Storage.Delete 1`] = `"contract.get"`;

exports[`syscalls System.Storage.Delete 2`] = `
Array [
  Array [
    Object {
      "hash": "3f67626522f6e54e4e92ada1b1da8133409d5ec3",
    },
  ],
]
`;

exports[`syscalls System.Storage.Delete 3`] = `"storageItem.tryGet"`;

exports[`syscalls System.Storage.Delete 4`] = `
Array [
  Array [
    Object {
      "hash": "3f67626522f6e54e4e92ada1b1da8133409d5ec3",
      "key": "",
    },
  ],
]
`;

exports[`syscalls System.Storage.Delete 5`] = `"storageItem.delete"`;

exports[`syscalls System.Storage.Delete 6`] = `
Array [
  Array [
    Object {
      "hash": "3f67626522f6e54e4e92ada1b1da8133409d5ec3",
      "key": "",
    },
  ],
]
`;

exports[`syscalls System.Storage.Delete 7`] = `Array []`;

exports[`syscalls System.Storage.Delete 8`] = `Array []`;

exports[`syscalls System.Storage.Delete 9`] = `Array []`;

exports[`syscalls System.Storage.Delete 10`] = `Array []`;

exports[`syscalls System.Storage.Get 1`] = `"contract.get"`;

exports[`syscalls System.Storage.Get 2`] = `
Array [
  Array [
    Object {
      "hash": "c5f1a32ca949050b5ad07587c475316c8b3c9647",
    },
  ],
]
`;

exports[`syscalls System.Storage.Get 3`] = `"storageItem.tryGet"`;

exports[`syscalls System.Storage.Get 4`] = `
Array [
  Array [
    Object {
      "hash": "c5f1a32ca949050b5ad07587c475316c8b3c9647",
      "key": "01",
    },
  ],
]
`;

exports[`syscalls System.Storage.Get 5`] = `Array []`;

exports[`syscalls System.Storage.Get 6`] = `Array []`;

exports[`syscalls System.Storage.Get 7`] = `Array []`;

exports[`syscalls System.Storage.Get 8`] = `Array []`;

exports[`syscalls System.Storage.Get 9`] = `"contract.get"`;

exports[`syscalls System.Storage.Get 10`] = `
Array [
  Array [
    Object {
      "hash": "c5f1a32ca949050b5ad07587c475316c8b3c9647",
    },
  ],
]
`;

exports[`syscalls System.Storage.Get 11`] = `"storageItem.tryGet"`;

exports[`syscalls System.Storage.Get 12`] = `
Array [
  Array [
    Object {
      "hash": "c5f1a32ca949050b5ad07587c475316c8b3c9647",
      "key": "01",
    },
  ],
]
`;

exports[`syscalls System.Storage.Get 13`] = `Array []`;

exports[`syscalls System.Storage.Get 14`] = `Array []`;

exports[`syscalls System.Storage.Get 15`] = `Array []`;

exports[`syscalls System.Storage.Get 16`] = `Array []`;

exports[`syscalls System.Storage.Put 1`] = `"contract.get"`;

exports[`syscalls System.Storage.Put 2`] = `
Array [
  Array [
    Object {
      "hash": "37cf61ca5211b65f1d13440c263db84c11a11c79",
    },
  ],
]
`;

exports[`syscalls System.Storage.Put 3`] = `"storageItem.tryGet"`;

exports[`syscalls System.Storage.Put 4`] = `
Array [
  Array [
    Object {
      "hash": "37cf61ca5211b65f1d13440c263db84c11a11c79",
      "key": "",
    },
  ],
]
`;

exports[`syscalls System.Storage.Put 5`] = `"storageItem.update"`;

exports[`syscalls System.Storage.Put 6`] = `
Array [
  Array [
    Object {
      "manifest": Object {
        "hasStorage": true,
      },
    },
    Object {
      "flags": 0,
      "value": "00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    },
  ],
]
`;

exports[`syscalls System.Storage.Put 7`] = `"storageItem.add"`;

exports[`syscalls System.Storage.Put 8`] = `Array []`;

exports[`syscalls System.Storage.Put 9`] = `Array []`;

exports[`syscalls System.Storage.Put 10`] = `Array []`;

exports[`syscalls System.Storage.Put 11`] = `Array []`;

exports[`syscalls System.Storage.Put 12`] = `Array []`;
